--- a/src/assets/icomoon/style.css
+++ b/src/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?e269h1');
-  src:  url('fonts/icomoon.eot?e269h1#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?e269h1') format('truetype'),
-    url('fonts/icomoon.woff?e269h1') format('woff'),
-    url('fonts/icomoon.svg?e269h1#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?e1q8rz');
+  src:  url('fonts/icomoon.eot?e1q8rz#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?e1q8rz') format('truetype'),
+    url('fonts/icomoon.woff?e1q8rz') format('woff'),
+    url('fonts/icomoon.svg?e1q8rz#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,39 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-bin:before {
+  content: "\e909";
+}
+.icon-down:before {
+  content: "\e90a";
+}
+.icon-edit:before {
+  content: "\e90b";
+}
+.icon-import:before {
+  content: "\e90c";
+}
+.icon-up:before {
+  content: "\e90d";
+}
+.icon-clip:before {
+  content: "\e904";
+}
+.icon-grid:before {
+  content: "\e905";
+}
+.icon-more:before {
+  content: "\e906";
+}
+.icon-notification:before {
+  content: "\e907";
+}
+.icon-question:before {
+  content: "\e908";
+}
+.icon-arrow:before {
+  content: "\e903";
+}
 .icon-chart:before {
   content: "\e902";
 }
