--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -9,10 +9,13 @@ $red: #ee5253;
 $blue: #54a0ff;
 $dark-blue: #2e86de;
 $marine: #00d2d3;
-$light-grey: #c8d6e5;
+$light-grey: #e6e6e6;
 $grey: #8395a7;
 $dark-grey: #222f3e;
+
+$border: rgba(60,60,60, 0.26);
 
 
 //Spacing
 $nav-width: 100px;
+$gap: 10px;
