--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,6 +1,6 @@
-@import '../styles/rwd.scss';
-@import '../styles/reset.scss';
-@import '../styles/variables.scss';
+@import '../styles/rwd';
+@import '../styles/reset';
+@import '../styles/variables';
 @import url('https://fonts.googleapis.com/css?family=Baloo+Chettan+2:400,500,600,700,800|Fjalla+One&display=swap&subset=latin-ext');
 
 * {
@@ -8,24 +8,26 @@
 }
 
 body {
-  background: url("/cloud.jpg") no-repeat;
-  font-family: 'Fjalla One', sans-serif;
+  box-sizing: border-box;
+  color: $dark-grey;
   font-family: 'Baloo Chettan 2', cursive;
   font-weight: 400;
-  color: $dark-grey;
-  box-sizing: border-box;
 }
 
 .container {
-  @include rwd('small-tablet') {
+  @include rwd('laptop') {
     padding: 0 15px;
     width: 100%;
   }
 
+  align-items: center;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
   margin: auto;
   width: 1260px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+  &--fluid {
+    width: 100%;
+  }
 }
