--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,7 +2,7 @@
 $white: #fff;
 $tomato: #ff6347;
 $yellow: #feca57;
-$orange: #ff9f43;
+$orange: #070606;
 $green: #1dd1a1;
 $light-red: #ff6b6b;
 $red: #ee5253;
